Fix a build error

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-08 12:16+0100\n"
-"PO-Revision-Date: 2010-03-09 22:41+0100\n"
+"PO-Revision-Date: 2010-03-10 23:06+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -9393,7 +9393,7 @@ msgid ""
 "  E<lt>emptyE<gt> = (none)\n"
 "  R = Reinst-required\n"
 msgstr ""
-"  E<lt>tom<gt> = (ingen)\n"
+"  E<lt>tomE<gt> = (ingen)\n"
 "  R = Ominstallation krävs\n"
 
 #. type: Plain text
