Update German scripts translation
Update to 498t.

--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2010-03-08 12:17+0100\n"
-"PO-Revision-Date: 2010-03-07 21:58+0100\n"
+"PO-Revision-Date: 2010-03-10 23:10+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -342,7 +342,7 @@ msgstr "(Verwenden Sie -d, um sich darüber hinwegzusetzen.)"
 
 #: scripts/dpkg-buildpackage.pl:356
 msgid "This is currently a non-fatal warning with -S, but"
-msgstr "Dies ist eine mit -S nicht-fatale Warnung, allerdings"
+msgstr "Dies ist eine mit -S nicht fatale Warnung, allerdings"
 
 #: scripts/dpkg-buildpackage.pl:357
 msgid "will probably become fatal in the future."
@@ -354,7 +354,7 @@ msgid ""
 "might contain undesired files."
 msgstr ""
 "Es ist keine gute Idee, ein Quellpaket zu erstellen, ohne vorher "
-"aufzuräumen; es könnte nicht-gewünschte Dateien enthalten."
+"aufzuräumen; es könnte nicht gewünschte Dateien enthalten."
 
 #: scripts/dpkg-buildpackage.pl:392
 msgid "Press the return key to start signing process\n"
@@ -1453,7 +1453,7 @@ msgstr "Symbol %s, verwendet von %s, in keiner der Bibliotheken gefunden."
 msgid ""
 "%s contains an unresolvable reference to symbol %s: it's probably a plugin."
 msgstr ""
-"%s enthält eine nicht-auflösbare Referenz auf Symbol %s: wahrscheinlich eine "
+"%s enthält eine nicht auflösbare Referenz auf Symbol %s: wahrscheinlich eine "
 "Erweiterung."
 
 #: scripts/dpkg-shlibdeps.pl:379
@@ -2031,7 +2031,7 @@ msgstr "Sie können nur entweder »to« oder »until« spezifizieren, verwende »until
 #: scripts/Dpkg/Changelog.pm:286 scripts/Dpkg/Changelog.pm:302
 #, perl-format
 msgid "'%s' option specifies non-existing version"
-msgstr "Option »%s« spezifiziert nicht-existierende Version"
+msgstr "Option »%s« spezifiziert nicht existierende Version"
 
 #: scripts/Dpkg/Changelog.pm:255 scripts/Dpkg/Changelog.pm:303
 msgid "use newest entry that is smaller than the one specified"
@@ -2585,6 +2585,12 @@ msgstr "  alte Version ist %s"
 msgid "expected ^--- in line %d of diff `%s'"
 msgstr "erwartes ^--- in Zeile %d des Diffs »%s«"
 
+#: scripts/Dpkg/Source/Patch.pm:327 scripts/Dpkg/Source/Patch.pm:342
+#: scripts/Dpkg/Source/Package/V3/quilt.pm:126
+#, perl-format
+msgid "%s contains an insecure path: %s"
+msgstr "%s enthält einen unsicheren Pfad: %s"
+
 #: scripts/Dpkg/Source/Patch.pm:329
 #, perl-format
 msgid "diff `%s' patches file with name ending .dpkg-orig"
@@ -2619,7 +2625,12 @@ msgstr "Datei-Entfernung ohne passenden Dateinamen im Diff »%s« (Zeile %d)"
 #: scripts/Dpkg/Source/Patch.pm:358
 #, perl-format
 msgid "diff %s removes a non-existing file %s (line %d)"
-msgstr "Diff %s entfernt eine nicht-existierende Datei %s (Zeile %d)"
+msgstr "Diff %s entfernt eine nicht existierende Datei %s (Zeile %d)"
+
+#: scripts/Dpkg/Source/Patch.pm:373
+#, perl-format
+msgid "diff %s modifies file %s through a symlink: %s"
+msgstr "Diff %s verändert Datei %s über einen Symlink: %s"
 
 #: scripts/Dpkg/Source/Patch.pm:367
 #, perl-format
