Use License instead of Licence in strings
This removes almost duplicate strings for translation.

--- a/dselect/po/id.po
+++ b/dselect/po/id.po
@@ -885,7 +885,7 @@ msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
-"Ini adalah perangkat lunak bebas; lihat GNU General Public Licence versi 2 "
+"Ini adalah perangkat lunak bebas; lihat GNU General Public License versi 2 "
 "atau \n"
 "selanjutnya untuk persyaratan penggandaan. TIDAK ADA jaminan. \n"
 "Lihat %s --license keterangan hak cipta dan rincian lisensi.\n"
