--- a/dselect/po/it.po
+++ b/dselect/po/it.po
@@ -902,7 +902,7 @@ msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
-"Questo è software libero; si veda la GNU General Public Licence versione 2\n"
+"Questo è software libero; si veda la GNU General Public License versione 2\n"
 "o successiva per le condizioni di copia. NON c'è alcuna garanzia.\n"
 "Si veda %s --license per il copyright e i dettagli della licenza.\n"
 
