--- a/dselect/po/nb.po
+++ b/dselect/po/nb.po
@@ -830,7 +830,7 @@ msgid ""
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
 "Dette er fri programvare. Du finner kopieringsvilkårene i\n"
-"GNU General Public Licence versjon 2 eller nyere. Det finnes INGEN garanti.\n"
+"GNU General Public License versjon 2 eller nyere. Det finnes INGEN garanti.\n"
 "Se «%s --licence» for opphavsrett og lisensdetaljer.\n"
 
 #: dselect/main.cc:173 dselect/main.cc:221
