--- a/dselect/po/nl.po
+++ b/dselect/po/nl.po
@@ -847,7 +847,7 @@ msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
-"Dit is vrije programmatuur; zie de GNU General Public Licence versie 2\n"
+"Dit is vrije programmatuur; zie de GNU General Public License versie 2\n"
 "of later voor kopiëervoorwaarden.  Er is GEEN garantie.\n"
 "Zie %s --license voor auteursrechten en licentiedetails.\n"
 
