--- a/dselect/po/ro.po
+++ b/dselect/po/ro.po
@@ -873,7 +873,7 @@ msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
-"Acesta este soft liber; vezi GNU General Public Licence versiunea 2 sau\n"
+"Acesta este soft liber; vezi GNU General Public License versiunea 2 sau\n"
 "ulterioară pentru condițiile de copiere. NU există NICI o garanție.\n"
 "Vezi %s --licence pentru detalii de licențiere și condiții de copiere.\n"
 
