--- a/dselect/po/sk.po
+++ b/dselect/po/sk.po
@@ -854,7 +854,7 @@ msgid ""
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
 "Toto je slobodný softvér; podrobnosti o pravidlách kopírovania\n"
-"nájdete v GNU General Public Licence verzii 2 alebo neskoršej.\n"
+"nájdete v GNU General Public License verzii 2 alebo neskoršej.\n"
 "Neposkytuje sa ŽIADNA záruka. Pomocou %s --licence získate\n"
 "podrobnosti o autorských právach a licencii.\n"
 
