--- a/dselect/po/zh_TW.po
+++ b/dselect/po/zh_TW.po
@@ -811,7 +811,7 @@ msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
-"這是自由軟體﹔要獲知復制該軟體的前提和條件，請參閱 GNU Public Licence \n"
+"這是自由軟體﹔要獲知復制該軟體的前提和條件，請參閱 GNU Public License \n"
 "第二或更新的版本。該軟體【不】提供任何擔保。\n"
 "請通過執行 dpkg-deb --licence 來查看版權和許可証的細節。\n"
 
