--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -43,11 +43,11 @@ msgstr ""
 #: scripts/dpkg-source.pl:402 scripts/changelog/debian.pl:39
 msgid ""
 "\n"
-"This is free software; see the GNU General Public Licence version 2 or\n"
+"This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
 "\n"
-"Dies ist freie Software; lesen Sie die GNU General Public Licence Version 2\n"
+"Dies ist freie Software; lesen Sie die GNU General Public License Version 2\n"
 "oder neuer für die Kopierbedingungen. Es gibt KEINE Haftung.\n"
 
 #: scripts/dpkg-architecture.pl:49
