--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -44,7 +44,7 @@ msgstr ""
 #: scripts/dpkg-source.pl:402 scripts/changelog/debian.pl:39
 msgid ""
 "\n"
-"This is free software; see the GNU General Public Licence version 2 or\n"
+"This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
 "\n"
