Update Catalan translations

--- a/debian/changelog
+++ b/debian/changelog
@@ -208,6 +208,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Add dpkg-gensymbols.1 to the translatable man page set.
 
   [ Updated dpkg translations ]
+  * Catalan (Guillem Jover).
   * French (Christian PERRIER).
   * German (Sven Joachim).
   * Italian 'Milo Casagrande). Closes: #567531
@@ -216,6 +217,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Swedish (Peter Krefting).
 
   [ Updated dselect translations ]
+  * Catalan (Guillem Jover).
   * German (Sven Joachim).
   * Spanish (Javier Fernández-Sanguino). Closes: #572861
   * Swedish (Peter Krefting).
@@ -227,6 +229,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Swedish (Peter Krefting).
 
   [ Updated scripts translations ]
+  * Catalan (Guillem Jover).
   * French (Christian PERRIER).
   * German (Helge Kreutzmann).
   * Swedish (Peter Krefting).
