--- a/scripts/po/ca.po
+++ b/scripts/po/ca.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.13.22\n"
+"Project-Id-Version: dpkg 1.15.6\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2010-03-08 12:17+0100\n"
-"PO-Revision-Date: 2010-01-03 16:40+0100\n"
+"PO-Revision-Date: 2010-03-11 03:04+0100\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1904,17 +1904,16 @@ msgstr ""
 
 #: scripts/Dpkg/ErrorHandling.pm:54
 msgid "info"
-msgstr ""
+msgstr "info"
 
 #: scripts/Dpkg/ErrorHandling.pm:65 scripts/Dpkg/ErrorHandling.pm:70
 #: scripts/Dpkg/ErrorHandling.pm:75
 msgid "error"
-msgstr ""
+msgstr "error"
 
 #: scripts/Dpkg/ErrorHandling.pm:80
-#, fuzzy
 msgid "internal error"
-msgstr "%s: error intern: %s"
+msgstr "error intern"
 
 #: scripts/Dpkg/ErrorHandling.pm:92
 #, perl-format
@@ -2374,9 +2373,9 @@ msgstr ""
 #: scripts/Dpkg/Source/Package/V3/bzr.pm:190
 #: scripts/Dpkg/Source/Package/V3/native.pm:60
 #: scripts/Dpkg/Source/Package/V3/git.pm:254
-#, fuzzy, perl-format
+#, perl-format
 msgid "unpacking %s"
-msgstr "%s: s'està desempaquetant %s"
+msgstr "s'està desempaquetant %s"
 
 #: scripts/Dpkg/Source/Package/V1.pm:122
 msgid "unable to keep orig directory (already exists)"
@@ -2393,10 +2392,10 @@ msgid "failed to rename saved %s to %s"
 msgstr ""
 
 #: scripts/Dpkg/Source/Package/V1.pm:142 scripts/Dpkg/Source/Package/V2.pm:199
-#: scripts/Dpkg/Source/Package/V3/quilt.pm:168
-#, fuzzy, perl-format
+#: scripts/Dpkg/Source/Package/V3/quilt.pm:169
+#, perl-format
 msgid "applying %s"
-msgstr "%s: s'està aplicant %s"
+msgstr "s'està aplicant %s"
 
 #: scripts/Dpkg/Source/Package/V1.pm:148
 #, perl-format
