man: Honour LINGUAS environment variable when installing translations
Users should be able to choose which locales to install by setting the
environment variable LINGUAS, or passing it as a make argument. Honour
the user setting and introduce a new LINGUAS_DIST to avoid undesired
behaviour on “make dist”.

Reported-by: Yuri Vasilevski <yvasilev@gentoo.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -177,6 +177,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Document “dpkg-query -l” abbreviated state information in the man page.
     Based on a patch by Marc-Jano Knopp <pub_br_debian.org@marc-jano.de>.
     Closes: #383869
+  * Honour LINGUAS environment variable when installing translated man pages.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
