Spanish dselect translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -217,6 +217,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * German (Sven Joachim).
+  * Spanish (Javier Fernández-Sanguino). Closes: #572861
   * Swedish (Peter Krefting).
 
   [ Updated man page translations ]
