build: Allow disabling Unicode support
This affects only dselect ncurses support for now.

Based-on-patch-by: Yuri Vasilevski <yvasilev@gentoo.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -178,6 +178,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     Based on a patch by Marc-Jano Knopp <pub_br_debian.org@marc-jano.de>.
     Closes: #383869
   * Honour LINGUAS environment variable when installing translated man pages.
+  * Allow disabling at configure time Unicode ncurses support for dselect.
+    Based on a patch by Yuri Vasilevski <yvasilev@gentoo.org>.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
