--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.15.6) UNRELEASED; urgency=low
+dpkg (1.15.6) experimental; urgency=low
 
   [ Raphaël Hertzog ]
   * debian/control: Add the accent on my first name.
@@ -241,7 +241,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * German (Helge Kreutzmann).
   * Swedish (Peter Krefting).
 
- -- Raphaël Hertzog <hertzog@debian.org>  Tue, 17 Nov 2009 17:24:47 +0100
+ -- Guillem Jover <guillem@debian.org>  Fri, 12 Mar 2010 00:15:31 +0100
 
 dpkg (1.15.5.6) unstable; urgency=low
 
