Update French dselect translation

--- a/dselect/po/fr.po
+++ b/dselect/po/fr.po
@@ -45,15 +45,15 @@
 # abréviation postint...
 # to fsync (synchroniser?)
 #
-# Christian Perrier <bubulle@debian.org>, 2005, 2006, 2007, 2008, 2009.
+# Christian Perrier <bubulle@debian.org>, 2005, 2006, 2007, 2008, 2009, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2010-03-08 12:15+0100\n"
-"PO-Revision-Date: 2009-10-24 09:11+0200\n"
+"PO-Revision-Date: 2010-03-12 07:16+0100\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
-"Language-Team: French <debian-l10n-french@lists.debian.org>\n"
+"Language-Team: fr <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -639,8 +639,7 @@ msgstr ""
 
 #: dselect/helpmsgs.cc:152
 msgid "Display, part 2: list highlight; information display"
-msgstr ""
-"Affichage, 2e partie : surlignage de la liste ; affichage d'informations"
+msgstr "Affichage, 2e partie : surlignage de la liste ; affichage d'informations"
 
 #: dselect/helpmsgs.cc:152
 msgid ""
@@ -899,7 +898,6 @@ msgstr ""
 "Copyright (C) 2000,2001 Wichert Akkerman.\n"
 
 #: dselect/main.cc:163
-#, fuzzy
 msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
@@ -907,7 +905,6 @@ msgstr ""
 "Ce programme est un logiciel libre ; prière de consulter la « GNU General\n"
 "Public  License » version 2 ou supérieure pour prendre connaissance des\n"
 "conditions de reproduction. AUCUNE garantie n'est offerte.\n"
-"Voir « %s --license » pour les détails de licence et droits de reproduction.\n"
 
 #: dselect/main.cc:173 dselect/main.cc:221
 msgid "<standard output>"
@@ -945,7 +942,7 @@ msgstr ""
 "\n"
 
 #: dselect/main.cc:197
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "  --help                     Show this help message.\n"
 "  --version                  Show the version.\n"
@@ -953,7 +950,6 @@ msgid ""
 msgstr ""
 "  --help                     Afficher ce message d'aide ;\n"
 "  --version                  Afficher la version ;\n"
-"  --license                  Afficher la licence.\n"
 "\n"
 
 #: dselect/main.cc:202
@@ -1355,7 +1351,7 @@ msgstr "décompacté (non configuré)"
 
 #: dselect/pkgdisplay.cc:54
 msgid "half configured (config failed)"
-msgstr ""
+msgstr "semi-configuré (échec de la configuration)"
 
 #: dselect/pkgdisplay.cc:55
 msgid "awaiting trigger processing"
