--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.15.6.1) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Sat, 13 Mar 2010 05:23:34 +0100
+
 dpkg (1.15.6) experimental; urgency=low
 
   [ Raphaël Hertzog ]
