Revert "libdpkg: Use varbuf_detach instead of ad-hoc code"
This reverts commit 77cae397a15baeca11c26aeb806b6be516e33d5f.

This change introdcued two points for memory leaks, which could be
significant, depending on the amount of calls to the functions.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 dpkg (1.15.6.1) UNRELEASED; urgency=low
 
-  *
+  * Fix two memory leaks introduced in 1.15.6.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 13 Mar 2010 05:23:34 +0100
 
