--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 dpkg (1.15.6.1) UNRELEASED; urgency=low
 
   * Fix two memory leaks introduced in 1.15.6.
+  * Always use C99 variadic macros, as the build requires them anyway, we
+    avoid exposing the configure variable HAVE_C99 on installed headers.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 13 Mar 2010 05:23:34 +0100
 
