s-s-d: Do not allow a --retry schedule where forever is the last item
The forever item needs something to repeat over, otherwise we just get
an infinite loop doing nothing.

Closes: #570938

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ dpkg (1.15.6.1) UNRELEASED; urgency=low
     avoid exposing the configure variable HAVE_C99 on installed headers.
   * Use __attribute__ keyword depending on compiler support, we avoid
     exposing the configure variable HAVE_C_ATTRIBUTE on installed headers.
+  * Do not allow a --retry schedule in start-stop-daemon where forever is
+    the last item, as it needs something to repeat over. Closes: #570938
 
   [ Raphaël Hertzog ]
   * Accept source packages without "Format" field for compatibility with very
