Update Swedish translation.
po/sv.po: 971t0f0u.
scripts/po/sv.po: 498t0f0u.

--- a/po/sv.po
+++ b/po/sv.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.14.15\n"
+"Project-Id-Version: dpkg 1.15.6.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2010-03-12 00:12+0100\n"
-"PO-Revision-Date: 2010-03-08 13:39+0100\n"
+"PO-Revision-Date: 2010-03-15 12:24+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -929,9 +929,9 @@ msgid "subprocess %s failed with wait status code %d"
 msgstr "underprocess %s misslyckades med statuskod %d"
 
 #: lib/dpkg/subproc.c:156
-#, fuzzy, c-format
+#, c-format
 msgid "wait for subprocess %s failed"
-msgstr "väntan på %s misslyckades"
+msgstr "väntan på underporcessen %s misslyckades"
 
 #: lib/dpkg/trigdeferred.l:69
 #, c-format
@@ -5440,9 +5440,8 @@ msgid "invalid status"
 msgstr "felaktig status"
 
 #: scripts/update-alternatives.pl:793
-#, fuzzy
 msgid "master link"
-msgstr "huvudfil"
+msgstr "huvudlänk"
 
 #: scripts/update-alternatives.pl:795
 msgid "slave name"
@@ -5584,7 +5583,7 @@ msgstr "misslyckades läsa länken (readlink) %s: %s"
 #: scripts/update-alternatives.pl:1030
 #, perl-format
 msgid "can't install unknown choice %s"
-msgstr ""
+msgstr "kan inte installera det okända valet %s"
 
 #: scripts/update-alternatives.pl:1047 scripts/update-alternatives.pl:1068
 #, perl-format
