dpkg-source: support unpacking old source packages lacking the Format field
.dsc files haven't always had a Format field. It was introduced in dpkg
1.6.13, in May 2000. This means that it's still not entirely
implausible to run across source packages without Format, for example
when importing the history of a source package into revision control.

Thus, dpkg-source should treat a missing Format field as 1.0, for
compatibility with these old packages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,16 @@
 dpkg (1.15.6.1) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
   * Fix two memory leaks introduced in 1.15.6.
   * Always use C99 variadic macros, as the build requires them anyway, we
     avoid exposing the configure variable HAVE_C99 on installed headers.
   * Use __attribute__ keyword depending on compiler support, we avoid
     exposing the configure variable HAVE_C_ATTRIBUTE on installed headers.
+
+  [ Raphaël Hertzog ]
+  * Accept source packages without "Format" field for compatibility with very
+    old source packages. Thanks to Colin Watson for the report and the patch.
+    Closes: #574097
 
   [ Updated dpkg translations ]
   * Swedish (Peter Krefting).
