--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.15.6.1) UNRELEASED; urgency=low
+dpkg (1.15.6.1) experimental; urgency=low
 
   [ Guillem Jover ]
   * Fix two memory leaks introduced in 1.15.6.
@@ -28,7 +28,7 @@ dpkg (1.15.6.1) UNRELEASED; urgency=low
   [ Updated scripts translations ]
   * Swedish (Peter Krefting).
 
- -- Guillem Jover <guillem@debian.org>  Sat, 13 Mar 2010 05:23:34 +0100
+ -- Guillem Jover <guillem@debian.org>  Wed, 24 Mar 2010 13:56:28 +0100
 
 dpkg (1.15.6) experimental; urgency=low
 
