Updated French translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ dpkg (1.15.6.1) experimental; urgency=low
     Closes: #574097
 
   [ Updated dpkg translations ]
+  * French (Christian Perrier).
   * Swedish (Peter Krefting).
 
   [ Updated scripts translations ]
