dpkg-source: warn when debian/source/format doesn't exist
Document in dpkg-source(1) the fact that the fallback to "1.0"
when debian/source/format doesn't exist is deprecated. Explain
the rationale.

Document the long-term deprecation in README.feature-removal-schedule.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,17 @@
-dpkg (1.15.6.2) experimental; urgency=low
+dpkg (1.15.6.2) UNRELEASED; urgency=low
+
+  [ Raphaël Hertzog ]
+  * Clarify the plan concerning dpkg-source, debian/source/format and
+    the default source format in dpkg-source(1). Add a warning
+    in dpkg-source to invite people to always create debian/source/format.
+    We deprecate the fallback to "1.0" (it's there for backwards compatibility
+    only) and debian/source/format is going to be mandatory at some point in
+    the future. Closes: #553928
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
 
- -- Helge Kreutzmann <debian@helgefjell.de>  Sun, 28 Mar 2010 17:37:20 +0200
+ -- Raphaël Hertzog <hertzog@debian.org>  Sun, 28 Mar 2010 16:46:04 +0200
 
 dpkg (1.15.6.1) experimental; urgency=low
 
