Update German translation of manual pages
Update to 1799t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.15.6.2) experimental; urgency=low
+
+  [ Updated man page translations ]
+  * German (Helge Kreutzmann).
+
+ -- Helge Kreutzmann <debian@helgefjell.de>  Sun, 28 Mar 2010 17:37:20 +0200
+
 dpkg (1.15.6.1) experimental; urgency=low
 
   [ Guillem Jover ]
