--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ dpkg (1.15.6.2) UNRELEASED; urgency=low
     We deprecate the fallback to "1.0" (it's there for backwards compatibility
     only) and debian/source/format is going to be mandatory at some point in
     the future. Closes: #553928
+  * Add .gitattributes to list of files ignored by dpkg-source.
+  * Document most common warnings and errors of dpkg-source in its manual
+    page.
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
