--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ dpkg (1.15.6.2) UNRELEASED; urgency=low
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
 
+  [ Updated scripts translations ]
+  * German (Helge Kreutzmann).
+
  -- Raphaël Hertzog <hertzog@debian.org>  Sun, 28 Mar 2010 16:46:04 +0200
 
 dpkg (1.15.6.1) experimental; urgency=low
