--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ dpkg (1.15.6.2) UNRELEASED; urgency=low
   * Document most common warnings and errors of dpkg-source in its manual
     page.
 
+  [ Updated dselect translations ]
+  * German (Sven Joachim).
+
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
 
